Fixed the favicon not showing (See `CHANGELOG.md`)

--- a/style/mediaQueries.css
+++ b/style/mediaQueries.css
@@ -50,6 +50,7 @@
 
     .page-content-wrapper {
         height: calc(100vh - 6rem);
+        height: calc(100svh - 6rem);
         padding: 6rem 0 0 0 !important;
     }
 
